2014-04-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Pointer.h:
	* X3DField.h:
	* Pointer.cpp:
	* Proto.h:
	* Scene.cpp:
	* Proto.cpp:
	* X3DScene.h:
	* X3DProto.h:
	* X3DBaseNode.cpp:
	* X3DArrayField.h:
	* X3DProto.cpp:
	* X3DScene.cpp:
	* ExternProto.h:
	* ExternProto.cpp:
	* X3DProtoObject.h:
	* TransformTool.x3dv:
	* X3DProtoObject.cpp:
	* X3DBrowserContext.cpp:
	* X3DExecutionContext.h:
	* X3DExecutionContext.cpp:
	* X3DPrototypeInstance.h:
	* X3DPrototypeInstance.cpp: 

2014-04-03  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformTool.x3dv: 

2014-04-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Route.h:
	* Route.cpp:
	* NamedNode.h:
	* X3DScene.cpp:
	* NamedNode.cpp:
	* ExportedNode.h:
	* ImportedNode.h:
	* ExportedNode.cpp:
	* ImportedNode.cpp:
	* X3DExecutionContext.cpp: 

2014-04-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Traverse.cpp: 

2014-04-03  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DToolObject.cpp: 

2014-04-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Traverse.cpp:
	* X3DOutput.cpp:
	* X3DBaseNode.h:
	* SceneLoader.cpp:
	* Statistics.x3dv:
	* TextureLoader.cpp:
	* BoundingBox.x3dv:
	* Notification.cpp:
	* Notification.x3dv:
	* TransformTool.x3dv:
	* X3DToolObject.h:
	* Texture3DLoader.cpp:
	* X3DToolObject.cpp:
	* LODTool.cpp:
	* X3DFieldDefinition.cpp:
	* Inline.cpp:
	* TransformTool.cpp:
	* EnvironmentalSensor.x3dv:
	* BillboardTool.cpp:
	* CollisionTool.cpp:
	* jsBrowser.h:
	* MovieTexture.h:
	* ImageTexture.h:
	* X3DUrlObjectTool.h:
	* PixelTexture.h:
	* MultiTexture.h:
	* X3DUrlObject.h:
	* jsContext.cpp:
	* X3DTextureNode.h:
	* X3DBoundedObjectTool.h:
	* jsBrowser.cpp:
	* PixelTexture3D.h:
	* ImageTexture3D.h:
	* ConeEmitter.cpp:
	* ComposedTexture3D.h:
	* RenderingProperties.cpp:
	* PointEmitter.cpp:
	* VolumeEmitter.cpp:
	* ParticleSystem.cpp:
	* SurfaceEmitter.cpp:
	* PolylineEmitter.cpp:
	* ExplosionEmitter.cpp:
	* X3DParticleEmitterNode.cpp:
	* X3DEnvironmentTextureNode.h: